# prometheus_fdw

./: .gitattributes  .gitignore  404.html  Cargo.toml  META.json.in  Makefile  README.md  Trunk.toml  clerk_fdw.control  final_clerk_wrapper.control  index.html  mkdocs.yml  prometheus_fdw.control
.github/workflows/: extension_ci.yml  extension_upgrade.yml  pages-deployment.yml  pgxn-release.yml
docs/: index.md
example/0_hello-world/: Dockerfile  run-demo.sh  sample-query.sql  setup-prometheus-fdw.sql
example/1_practical_example/: setup-metrics-sync.sql
examples/0_hello-world/: run-demo.sh
examples/0_hello_world/: Dockerfile  README.md  sample-query.sql
examples/1_practical_example/: Dockerfile  README.md  custom.conf  run-demo.sh  sample-query.sql  setup-cache.sql  setup-metrics-sync.sql  setup-prometheus-fdw.sql
hello_world/basic_setup/: index.html
hello_world/practical_example/setup/: index.html
search/: search_index.json
sql/: prometheus_fdw--0.1.4--0.1.5.sql
src/: init.rs  lib.rs
